webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/hero.css
/**
 * Type: Organisms.
 * Hero.
 */

:root {
  --hero-max-height: 500px;
  --hero-narrow-max-height: 350px;
}

.hero {
  position: relative;
  max-height: var(--hero-max-height);
  overflow: hidden;

  & h1 {
    font-size: var(--base-font-size-xxxlarge);

    @media (--viewport-md-min) {
      max-width: 500px;
      margin: 0 auto 20px;
      font-size: var(--base-font-size-xxxxxlarge);
    }
  }

  &--narrow-height {
    max-height: var(--hero-narrow-max-height);

    .hero__content {
      max-height: var(--hero-narrow-max-height);
    }
  }

  &--overlay {
    &::before {
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
      z-index: 1;
      background-color: rgb(0 0 0 / 30%);
      content: "";
    }
  }

  iframe,
  video {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    pointer-events: none;
  }

  &__content {
    position: relative;
    z-index: 2;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    width: 100%;
    height: 100vh;
    max-height: var(--hero-max-height);
    font-size: var(--base-font-size-medium);

    @media (--viewport-md-min) {
      height: calc(90vh - var(--header-height));
    }

    &-text {
      margin-bottom: 24px;
    }
  }

  &__iframe-wrapper:not(.active) {
    display: none;
  }

  &__iframe-wrapper:not(:empty) {
    position: absolute;
    top: 50%;
    left: 50%;
    width: 100%;
    height: 100%;
    padding-top: 56.25%;
    background-color: var(--color-black);
    transform: translate(-50%, -50%);

    @media (max-width: 900px) {
      width: 900px;
    }

    .contextual-region {
      position: initial;
    }
  }

  &--center {
    .hero__content {
      align-items: center;
      text-align: center;
    }

    .hero__title,
    .hero__description {
      text-align: center;
    }
  }

  &--right {
    .hero__content {
      align-items: flex-end;
    }

    .hero__title,
    .hero__description {
      text-align: right;
    }
  }

  &--image-added {
    height: 100vh;

    @media (--viewport-md-min) {
      height: calc(90vh - var(--header-height));
    }

    picture,
    img,
    .container,
    .hero__image-wrapper,
    .hero__image-wrapper div:not(.contextual) {
      display: block;
      height: inherit;
      min-height: inherit;
      max-height: inherit;
    }

    img {
      width: 100%;
      object-fit: cover;
    }

    .container {
      position: absolute;
      top: 0;
      right: 0;
      left: 0;
    }
  }

  &--dynamic-height {
    height: auto;
    min-height: 480px;
    max-height: none;

    & .container,
    & .row,
    & .hero__content {
      height: 100%;
      max-height: none;
    }
  }

  .section__graphics-bottom {
    display: none;
  }

  &--inverted {
    color: white;
  }

  &__content-title {
    font-size: 36px;
  }
}

#block-pageheader .hero {
  .section__graphics-bottom {
    top: auto;
    bottom: -.1%;
    display: block;

    & path {
      fill: #fff;
    }
  }
}

